--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
 	},
 	"permissions": ["storage", "activeTab", "scripting"],
 	"host_permissions": [
-		"https://cbms.quickbase.com/*/"	
+		"*://cbms.quickbase.com/*/"	
 	],
 	"action": {
 		"default_popup": "popup.html",
